syntax = "proto3";
package rpc.paymentprocessor.v1;
option go_package = "github.com/jacktantram/build/go/rpc/paymentprocessor/v1";




import "shared/amount/v1/money.proto";
import "shared/payment/v1/payment_method.proto";
import "shared/payment/v1/payment.proto";

// Denotes the fields that can be updated for payments.
enum UpdatePaymentField {
  UPDATE_PAYMENT_FIELD_UNSPECIFIED = 0;
  UPDATE_PAYMENT_FIELD_STATUS = 1;
}

// Request used to create a payment.
message CreatePaymentRequest{
  // The amount to authorize against the payment method.
  shared.amount.v1.Money amount = 1;
  // The payment will be linked to one kind of payment method
  oneof payment_method{
    // card payment method type for authorization
    shared.payment.v1.PaymentMethodCard card = 4;
  }
}
// Response returned from a successful payment creation.
message CreatePaymentResponse{
  // the payment created with the create payment request
  shared.payment.v1.Payment payment = 1;
}


// Request used to create a Refund on a payment method.
message GetPaymentRequest{
  // The ID to get the payment.
  string payment_id = 1;
}

// Returned payment
message GetPaymentResponse{
  // the specified payment.
  shared.payment.v1.Payment payment = 1;
}