syntax = "proto3";
package rpc.paymentprocessor.v1;
option go_package = "github.com/jacktantram/build/go/rpc/paymentprocessor/v1";

import "shared/payment/v1/payment_action.proto";

// Denotes the fields that can be updated for payments.
enum UpdatePaymentActionField {
  UPDATE_PAYMENT_ACTION_FIELD_UNSPECIFIED = 0;
  UPDATE_PAYMENT_ACTION_RESPONSE_CODE = 1;
}

// Lists payment actions
message ListPaymentActionsRequest{
  // ability to filter.
  ListPaymentActionFilters filters = 1;
  uint32 offset = 2;
  uint32 limit = 3;
}

message ListPaymentActionFilters{
  repeated string action_ids = 1;
}

// Returns a list of payment actions
message ListPaymentActionsResponse{
  // the specified payment actions.
  repeated shared.payment.v1.PaymentAction payment_action = 1;
}