syntax = "proto3";
package rpc.paymentprocessor.v1;
option go_package = "github.com/jacktantram/build/go/rpc/paymentprocessor/v1";

import "shared/amount/v1/money.proto";
import "shared/payment/v1/payment.proto";

// Request used to create a void a payment.
message CreateVoidRequest{
    // The ID returned in the authorization request.
    string payment_id = 1;
}

// Response returned from a successful void.
message CreateVoidResponse{
    // the updated payment.
    shared.payment.v1.Payment payment= 1;
}