syntax = "proto3";
package shared.payment.v1;
option go_package = "github.com/jacktantram/payments-api/build/go/shared/payment/v1";

import "shared/amount/v1/money.proto";
import "google/protobuf/timestamp.proto";
import "shared/payment/v1/payment_method.proto";



// Defines a payment entity.
message Payment{
  // The unique payment identifier.
  string id = 1;
  // The payment amount.
  shared.amount.v1.Money amount = 2;
  // The status of the payment/
  PaymentStatus payment_status = 3;
  // The linking action id to the payment. See PaymentAction.
  string action_id = 4;
  // The date the payment was created.
  google.protobuf.Timestamp created_at = 5;
  // The date the payment was updated.
  google.protobuf.Timestamp updated_at = 6;
}


// Represents the current status of the payment.
enum PaymentStatus {
  // If the payment status is not provided.
  PAYMENT_STATUS_UNSPECIFIED = 0;
  // The payment is in a pending status.
  PAYMENT_STATUS_PENDING = 1;
  // The payment has been authorized.
  PAYMENT_STATUS_AUTHORIZED = 2;
  // The payment is currently partially captured.
  PAYMENT_STATUS_PARTIALLY_CAPTURED = 3;
  // The payment has been completely captured.
  PAYMENT_STATUS_CAPTURED = 4;
  // The payment has been partially refunded.
  PAYMENT_STATUS_PARTIALLY_REFUNDED = 5;
  // The payment has been fully refunded.
  PAYMENT_STATUS_REFUNDED = 6;
  // The payment has been voided.
  PAYMENT_STATUS_VOIDED = 7;
}